fix: text color for light and dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
   --green-dark: #072610;
   --violet-dark: #3c004d;
   --black-dark: #001200;
@@ -24,7 +24,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #ffffff;
   }
 }
 
@@ -77,6 +77,15 @@ body {
   font-family: "ARLRDBD", sans-serif;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 1000px black inset;
+  -webkit-text-fill-color: white;
+  caret-color: white;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 .wkw-scrollbar {
   overflow-y: auto;
 }
@@ -85,18 +94,21 @@ body {
 }
 .wkw-scrollbar::-webkit-scrollbar-track {
   border-radius: 0;
-  background-color: #f3f4f6;
+  background-color: black;
 }
 .wkw-scrollbar::-webkit-scrollbar-thumb {
   border-radius: 0;
-  background-color: #d1d5db;
+  background-color: #ffffff;
+  border-radius: 12px;
 }
-@media (prefers-color-scheme: dark) {
-  .wkw-scrollbar::-webkit-scrollbar-track {
-    background-color: black;
+
+@media (max-width: 640px) {
+  .pick-buttons > * + * {
+    margin-left: 0.75rem;
   }
-  .wkw-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #ffffff;
-    border-radius: 12px;
+
+  .predict-width {
+    width: 90%;
+    margin: 0 auto;
   }
 }
